# Maple

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
Maple/src/: Maple.h  __init__.py  mppch.h
Maple/src/Maple/: Application.cpp  Application.h  Application.py  Core.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Log.py  Window.h  __init__.py
Maple/src/Maple/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Maple/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Sandbox/src/: SandboxApp.cpp  SandboxApp.py  Utility.py  __init__.py
Scripts/: GenerateProject.sh  Win-GenerateProject.bat  build-maple-framework.bat  build-maple-framework.sh  run-sandbox-app.bat  run-sandbox-app.sh
